<resources>
    <string name="app_name">CompressStud</string>

    <string-array name="schoolLevels">
        <item>Podstawowa</item>
        <item>Średnia</item>
    </string-array>
    <string-array name="musicGenres">
        <item>Muzyka klasyczna</item>
        <item>Trap</item>
        <item>Rap</item>
        <item>Muzyka Elektroniczna</item>
        <item>Rock</item>
    </string-array>
    <string-array name="notificationDelays">
        <item>Codziennie</item>
        <item>Co dwa dni</item>
        <item>Dzień przed sprawdzianem</item>
        <item>Brak</item>
    </string-array>
    <string-array name="listOfPrimaryLessons">
        <item>"Język polski"</item>
        <item>"Język angielski"</item>
        <item>"Język niemiecki"</item>
        <item>"Muzyka"</item>
        <item>"Plastyka"</item>
        <item>"Historia"</item>
        <item>"WOS"</item>
        <item>"Przyroda"</item>
        <item>"Geografia"</item>
        <item>"Biologia"</item>
        <item>"Chemia"</item>
        <item>"Fizyka"</item>
        <item>"Matematyka"</item>
        <item>"Informatyka"</item>
        <item>"EDB"</item>
    </string-array>
    <string-array name="listOfHighLessons">
        <item>"Język polski"</item>
        <item>"Język angielski"</item>
        <item>"Język niemiecki"</item>
        <item>"Filozofia"</item>
        <item>"Język łaciński"</item>
        <item>"Historia muzyki"</item>
        <item>"Historia tańca"</item>
        <item>"Historia sztuki"</item>
        <item>"Historia"</item>
        <item>"WOS"</item>
        <item>"Geografia"</item>
        <item>"Podstawy przedsiębiorczości"</item>
        <item>"Biologia"</item>
        <item>"Chemia"</item>
        <item>"Fizyka"</item>
        <item>"Matematyka"</item>
        <item>"Informatyka"</item>
        <item>"EDB"</item>
    </string-array>


    <array name="material_calendar_months_array">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </array>
    <string name="material_calendar_monday">P</string>
    <string name="material_calendar_tuesday">W</string>
    <string name="material_calendar_wednesday">Ś</string>
    <string name="material_calendar_thursday">C</string>
    <string name="material_calendar_friday">P</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">N</string>


    <string name="title_activity_calendar">CalendarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calendarText">Kalendarz</string>
    <string name="footerText"><![CDATA[Made by SakubDev & Kefirx]]></string>
    <string name="backText">COFNIJ</string>
    <string name="addNewText">DODAJ NOWY</string>
    <string name="actionsText">Akcje</string>
    <string name="mathText">MATEMATYKA</string>
    <string name="startLearningText">ROZPOCZNIJ NAUKĘ</string>
    <string name="deleteExamText">USUŃ SPRAWDZIAN</string>
    <string name="openCalendarText">Otwórz kalendarz</string>
    <string name="loremText">Lorem</string>
    <string name="statsText">Statystyki</string>
    <string name="settingsText">Ustawienia</string>
    <string name="lessonText">Przedmiot:</string>
    <string name="topicText">Dział:</string>
    <string name="reminderText">Przypomnienie:</string>
    <string name="hourOfRemindText">Godzina przypominania:</string>
    <string name="addText">DODAJ</string>
    <string name="cancelText">ANULUJ</string>
    <string name="welcomeText">Witaj</string>
    <string name="wipeConfirmText">TAK, WYCZYŚĆ</string>
    <string name="wipeQuestionText">Jesteś pewien?</string>
    <string name="wipeWarningText">Wyczyszczenie danych spowoduje także usunięcie statystyk i sprawdzianów.</string>
    <string name="confirmText">ZATWIERDŹ</string>
    <string name="newFavMusicText">Podaj nowy ulubiony typ muzyki</string>
    <string name="newFavMusicQuestionText">Słuchasz muzyki podczas nauki?</string>
    <string name="newNameText">Podaj nowe imie</string>
    <string name="wipeDataText">Wyczyść dane</string>
    <string name="musicalPreferencesText">Preferencje muzyczne</string>
    <string name="eduLevelText">Poziom nauczania</string>
    <string name="nameText">Imię</string>
    <string name="newEduLevelText">Podaj nowy poziom nauczania</string>
    <string name="learningTimeText">Czas poświęcony nauce:</string>
    <string name="watchedVideosText">Liczba obejrzanych filmów:</string>
    <string name="learningActivityTimeText">CZAS NAUKI:</string>
    <string name="learningText">Nauka</string>
    <string name="pauseText">PAUZA</string>
    <string name="stopText">STOP</string>
    <string name="endText">KONIEC</string>
    <string name="endText1">To już koniec!</string>
    <string name="endText2">aplikacji 😁</string>
    <string name="blueWave">wave</string>
    <string name="endText3">Możesz przejśc do</string>
    <string name="registerText1">Z nami\nnauka jest</string>
    <string name="registerText2">prostsza!</string>
    <string name="startText">ZACZYNAMY</string>
    <string name="nextText">DALEJ</string>
    <string name="firstStepText">Krok 1:</string>
    <string name="putNameText">Podaj imię</string>
    <string name="secondStepText">Krok 2:</string>
    <string name="putEduLevelText">Podaj poziom\nnauczania</string>
    <string name="thirdStepText">Krok 3:</string>
    <string name="musicRegText">Odpowiedz\nna pytanie</string>
    <string name="musicRegText2">Słuchasz muzyki podczas nauki?</string>
    <string name="fourthStepText">Krok 4:</string>
    <string name="typeMusicRegText">Wybierz swój\nulubiony\ngatunek muzyczny</string>
</resources>